force-app/main/default/objects/Donor__c/Donor__c.object-meta.xml
<CustomObject>
    <label>Donor</label>
    <nameField>
        <label>Donor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>