force-app/main/default/objects/Donor__c/fields/External_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Donor_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>External Donor ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>