force-app/main/default/objects/Donor__c/fields/Last_Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Donation_Date__c</fullName>
    <label>Last Donation Date</label>
    <type>Date</type>
</CustomField>