force-app/main/default/objects/Donor__c/fields/Last_Donation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Donation_Date_c__c</fullName>
    <label>Last Donation Date</label>
    <summarizedField>Donation__c.Donation_Date__c</summarizedField>
    <summaryForeignKey>Donation__c.Donor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>