force-app/main/default/objects/Donor__c/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>