force-app/main/default/objects/Donor__c/fields/Related_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Related_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link donor who is also a volunteer</description>
    <label>Related Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Donors</relationshipLabel>
    <relationshipName>Donors</relationshipName>
    <type>Lookup</type>
</CustomField>