force-app/main/default/objects/Donor__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>New Donor</fullName>
            </value>
            <value>
                <fullName>Regular Donor</fullName>
            </value>
            <value>
                <fullName>Loyal Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>