force-app/main/default/objects/Donor__c/fields/Total_Donated_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Donated_c__c</fullName>
    <label>Total Donated</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryForeignKey>Donation__c.Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>